compiler/src/test/resources/golden/errors/eff_helper_missing_io.dawn
fn load() -> String = read_file("a.txt")
